--- a/articulooficinaapp.client/src/app/app.component.css
+++ b/articulooficinaapp.client/src/app/app.component.css
@@ -1,6 +1,5 @@
-﻿:host {
+﻿/* :host {
     max-width: 1280px;
-    padding: 2rem;
     text-align: center;
 }
 
@@ -11,4 +10,15 @@ th, td {
 
 table {
     margin: 0 auto;
+} */
+
+.title-app {
+    font-size: xx-large;
+    font-weight: bolder;
+    color: white;
+    text-shadow: 3px 3px 3px #ababab;
+}
+
+.h1 {
+    margin-top: -3px;
 }
