--- a/articulooficinaapp.client/src/app/app.component.html
+++ b/articulooficinaapp.client/src/app/app.component.html
@@ -1,25 +1,90 @@
 ﻿<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-            <h1 class="title-app">Office +</h1>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="mt-3">
-    <!-- <app-home></app-home> -->
-     <router-outlet/>
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <h1 class="title-app">Office +</h1>
+      </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-outline-primary" (click)="openModal()">{{ isLogged ? '' : 'Iniciar sessión' }}</button>
+      </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-outline-primary" (click)="openShop()">{{ isLogged ? '' : 'Iniciar sessión' }}</button>
+      </li>
+    </ul>
   </div>
+</nav>
+<div class="mt-3">
+  <router-outlet />
+  <ngb-alert [dismissible]="false">
+    <strong>{{MensajeCompra}}</strong>
+  </ngb-alert>
+</div>
+
+<ng-template #modalLogin let-dismiss="dismiss" let-close="close">
+  <div class="card">
+
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+      <li class="nav-item text-center">
+        <a class="nav-link active btl" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
+          aria-controls="pills-home" aria-selected="true">Login</a>
+      </li>
+      <li class="nav-item text-center">
+        <a class="nav-link btr" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
+          aria-controls="pills-profile" aria-selected="false">Resgistro</a>
+      </li>
+
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+
+        <div class="form px-4 pt-5">
+
+          <input [formControl]="asFormControl(loginForm.get('email'))" type="text" name="" class="form-control" placeholder="Email">
+
+          <input [formControl]="asFormControl(loginForm.get('password'))"  type="text" name="" class="form-control" placeholder="Password">
+          <button class="btn btn-dark btn-block" (click)="logIn()">Login</button>
+          <span>{{ mensaggeLogin }}</span>
+        </div>
+
+
+
+      </div>
+      <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+
+
+        <div class="form px-4">
+
+          <input type="text" name="" class="form-control" placeholder="Name">
+
+          <input type="text" name="" class="form-control" placeholder="Email">
+
+          <input type="text" name="" class="form-control" placeholder="Password">
+
+          <button class="btn btn-dark btn-block">Signup</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #shop let-offcanvas>
+	<div class="offcanvas-header">
+		<h4 class="offcanvas-title" id="offcanvas-basic-title">Carrito de compras</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
+	</div>
+	<div class="offcanvas-body">
+    <div class="col" *ngFor="let articulo of articulosShop">
+      <div class="card h-100">
+        <img [src]="articulo.imagen" class="card-img-top" alt="{{ articulo.descripcion }}">
+        <div class="card-body">
+          <h5 class="card-title">{{ articulo.descripcion }}</h5>
+          <p class="card-text">Precio: {{ articulo.precio | currency }}</p>
+          <p class="card-text">Disponibles: {{ articulo.codigo }}</p>
+        </div>
+      </div>
+    </div>
+		<div class="text-end">
+			<button type="button" class="btn btn-outline-secondary" (click)="offcanvas.close('Save click'): comprar()">Comprar</button>
+		</div>
+	</div>
+</ng-template>
