fix: al compilar manda errores de sintaxys

--- a/articulooficinaapp.client/src/app/app.component.html
+++ b/articulooficinaapp.client/src/app/app.component.html
@@ -84,7 +84,7 @@
       </div>
     </div>
 		<div class="text-end">
-			<button type="button" class="btn btn-outline-secondary" (click)="offcanvas.close('Save click'): comprar()">Comprar</button>
+			<button type="button" class="btn btn-outline-secondary" (click)="offcanvas.close('Save click'); comprar()">Comprar</button>
 		</div>
 	</div>
 </ng-template>
