--- a/articulooficinaapp.client/src/app/layout/components/articulos/articulos.component.html
+++ b/articulooficinaapp.client/src/app/layout/components/articulos/articulos.component.html
@@ -9,7 +9,7 @@
               <p class="card-text">Disponibles: {{ articulo.codigo }}</p>
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-outline-primary" (click)="as.notifyAdd(articulo)">Comprar</button>
+              <button type="button" class="btn btn-outline-primary" (click)="this.as.notifyAdd(articulo)">Comprar</button>
             </div>
           </div>
         </div>
